@@ -10,6 +10,10 @@
 	<name>DSS Token</name>
 	<description>Token implementations for PKCS11, PKCS12, MsCapi and JKS</description>
 
+	<properties>
+		<module-name>jpms_dss_token</module-name>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>eu.europa.ec.joinup.sd-dss</groupId>
@@ -37,39 +41,4 @@
 		</dependency>
 	</dependencies>
 	
-	<profiles>
-		<profile>
-            <id>jdk19-plus</id>
-            <activation>
-                <jdk>[9,)</jdk>
-            </activation>
-            <build>
-				<plugins>
-		              <plugin>
-						<artifactId>maven-compiler-plugin</artifactId>
-						<configuration>
-
-	                        <!-- jdk.crypto.cryptoki : SunPKCS11 -->
-	                        <compilerArgs>
-								<arg>--add-modules</arg>
-								<arg>jdk.crypto.cryptoki</arg>
-								
-								
-								<!-- Reflection at runtime -->
-								<arg>--add-opens</arg>
-								<arg>jdk.crypto.cryptoki/sun.security.pkcs11=ALL-UNNAMED</arg>
-							</compilerArgs>
-						</configuration>
-					</plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <argLine>--add-modules jdk.crypto.cryptoki</argLine>
-                        </configuration>
-                    </plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
 </project>
